--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>SKYWARE MULTI-LEVEL MARKET</header>
     <div id="form-div">
         <h3>MEMBERSHIP REGISRATION</h3>
-        <form action="php-scripts/member-registration.php" method="POST">
+        <form action="php/member-registration.php" method="POST">
             <select name="title" id="title-field" class="form-field-class">
                 <option >Your Title</option>
                 <option value="Chief.">Chief</option>
@@ -24,7 +24,7 @@
             <input type="text" name="surname" id="surname-field" class="form-field-class" placeholder="Enter Your Surname">
             <input type="text" name="firstname" id="firstname-field" class="form-field-class" placeholder="Enter Your Firstname">
             <input type="text" name="othername" id="othername-field" class="form-field-class" placeholder="Enter Your Othername"> <br>
-            <div id="gender-div"><input type="radio" name="sex" value="Male" id="male-field">Male <input type="radio" name="sex" value="Male" id="female-field"> Female</div>
+            <div id="gender-div"><input type="radio" name="sex" value="Male" id="male-field">Male <input type="radio" name="sex" value="Female" id="female-field"> Female</div>
             <input type="number" name="phone_number" id="phone-field"class="form-field-class" placeholder="Enter Your Phone Number">
             <input type="email" name="email" id="email-field" class="form-field-class" placeholder="Enter Your Email Address">
             <input type="number" name="referrer" id="ref_id" placeholder="Referrer Number"><br>
